# opengl-playground

./: Cargo.toml  Readme.md
assets/shaders/: blur.frag  dither.frag  kawase.frag
src/: camera.rs  common_gl.rs  main.rs  renderer.rs  scene.rs  scenes.rs
src/renderer/: round_quads.rs
src/scenes/: blurring.rs  kawase.rs  round_quads.rs
src/scenes/shaders/: blur.frag  quad.vert  round-rect.vert  screen.frag  screen.vert  texture.frag
src/shaders/: basic.frag  basic.vert  quad.vert  round-rect.frag  round-rect.vert
