[package]
name = "opengl-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
glam = "0.29.0"
glutin = "0.32.0"
glutin-winit = "0.5.0"
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }
rand = "0.8.5"
winit = { version = "0.30.3", default-features = false, features = [
	"rwh_06",
	"x11",
	"wayland",
] }
